# sndx

./: .gitignore  README.md  flake.nix  flake2.nix  pyproject.toml  requirements.txt
notebooks/: Dev.ipynb  Extract.ipynb  Extract2.ipynb  Scaffold.ipynb  Untitled.ipynb
notebooks/.ipynb_checkpoints/: Dev-checkpoint.ipynb  Extract-checkpoint.ipynb  Extract2-checkpoint.ipynb  Scaffold-checkpoint.ipynb
notebooks/~/.local/share/sndx/categories/: L_pop_e_des_missionnaires_O.M._I._au_Canada.yaml
scripts/: generate-overview.sh
src/sndx/: __init__.py  cli.py
src/sndx/commands/: extract.py  scaffold.py
