[project]
name = "sndx"
version = "0.1.0"
description = ""
authors = [
    {name = "Maxime Laudrin",email = "maxime.laudrin@protonmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pyppeteer (>=2.0.0,<3.0.0)",
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.4.10"
catppuccin-jupyterlab = "^0.2.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
